change package warning