@@ -1,8 +1,5 @@
 package cn.luischen.utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.File;
@@ -10,11 +7,12 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.channels.FileChannel;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 import java.util.Random;
 
 /**
  * 工具类
- * Created by BlueT on 2017/3/9.
  */
 public class Tools {
     private static final Random random = new Random();
@@ -27,10 +25,8 @@ public class Tools {
             outputChannel = new FileOutputStream(dest).getChannel();
             outputChannel.transferFrom(inputChannel, 0, inputChannel.size());
         } finally {
-            assert inputChannel != null;
-            inputChannel.close();
-            assert outputChannel != null;
-            outputChannel.close();
+            if (inputChannel != null) inputChannel.close();
+            if (outputChannel != null) outputChannel.close();
         }
     }
 
@@ -38,52 +34,48 @@ public class Tools {
         return random.nextInt(max) % (max - min + 1) + min;
     }
 
-	public static String flowAutoShow(double value) {
-		// Math.round 方法接收 float 和 double 类型,如果参数是 int 的话,会强转为 float,这个时候调用该方法无意义
+    public static String flowAutoShow(double value) {
         int kb = 1024;
         int mb = 1048576;
         int gb = 1073741824;
-		double abs = Math.abs(value);
-		if (abs > gb) {
+        double abs = Math.abs(value);
+        if (abs > gb) {
             return Math.round(value / gb) + "GB";
-		} else if (abs > mb) {
+        } else if (abs > mb) {
             return Math.round(value / mb) + "MB";
-		} else if (abs > kb) {
+        } else if (abs > kb) {
             return Math.round(value / kb) + "KB";
         }
         return Math.round(value) + "";
     }
 
+    /**
+     * AES 加密（Base64 编码）
+     */
     public static String enAes(String data, String key) throws Exception {
         Cipher cipher = Cipher.getInstance("AES");
-        SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
+        SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), "AES");
         cipher.init(Cipher.ENCRYPT_MODE, secretKeySpec);
-        byte[] encryptedBytes = cipher.doFinal(data.getBytes());
-        return new BASE64Encoder().encode(encryptedBytes);
-    }
-
-    public static String deAes(String data, String key) throws Exception {
-        Cipher cipher = Cipher.getInstance("AES");
-        SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
-        cipher.init(Cipher.DECRYPT_MODE, secretKeySpec);
-        byte[] cipherTextBytes = new BASE64Decoder().decodeBuffer(data);
-        byte[] decValue = cipher.doFinal(cipherTextBytes);
-        return new String(decValue);
+        byte[] encryptedBytes = cipher.doFinal(data.getBytes(StandardCharsets.UTF_8));
+        return Base64.getEncoder().encodeToString(encryptedBytes);
     }
 
     /**
-     * 判断字符串是否为数字和有正确的值
-     *
-     * @param str
-     * @return
+     * AES 解密（Base64 解码）
+     */
+    public static String deAes(String data, String key) throws Exception {
+        Cipher cipher = Cipher.getInstance("AES");
+        SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), "AES");
+        cipher.init(Cipher.DECRYPT_MODE, secretKeySpec);
+        byte[] cipherTextBytes = Base64.getDecoder().decode(data);
+        byte[] decValue = cipher.doFinal(cipherTextBytes);
+        return new String(decValue, StandardCharsets.UTF_8);
+    }
+
+    /**
+     * 判断字符串是否为数字并且非空
      */
     public static boolean isNumber(String str) {
-        // Pattern pattern=Pattern.compile("[0-9]*");
-        // return pattern.matcher(str).matches();
-        if (null != str && 0 != str.trim().length() && str.matches("\\d*")) {
-            return true;
-        }
-
-        return false;
+        return str != null && !str.trim().isEmpty() && str.matches("\\d*");
     }
 }
